--- a/src/pages/produkt/sykepenger/sykepenger-2.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-2.njk
@@ -10,26 +10,24 @@ variant: '2'
   {% set chapters = collections.all | onlyTags('sykepenger', 'innhold') | sort(false, false, 'data.order') %}
 
   <main class="grid py-16 grid-cols-center" data-theme="sykepenger" x-data="{ showChapter1: false, showChapter2: false, showChapter3: false, showChapter4: false, showChapter5: false, showToc: false, expandToc: false }">
-    <div class="col-main">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
-      <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
-      <div class="mt-8 prose text-pretty max-w-prose">
-        <p class="text-lg">{{ ingress | safe }}</p>
+    <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+    <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
+    <div class="mt-8 prose text-pretty max-w-prose">
+      <p class="text-lg">{{ ingress | safe }}</p>
 
-        <div class="px-5 py-3 border rounded-lg border-slate-300 text-balance">
-          {{ audience | markdown | safe if audience }}
-        </div>
+      <div class="px-5 py-3 border rounded-lg border-slate-300 text-balance">
+        {{ audience | markdown | safe if audience }}
       </div>
     </div>
 
     {# Innholdsfortegnelse #}
-    <nav class="px-5 py-3 mt-8 rounded-lg bg-slate-100" x-intersect:enter.margin.-5px.0%.0%.0%="showToc = false" x-intersect:leave.margin.-5px.0%.0%.0%="showToc = true">
+    <nav class="px-5 pt-4 pb-5 mt-8 rounded-lg bg-slate-100" x-intersect:enter.margin.-5px.0%.0%.0%="showToc = false" x-intersect:leave.margin.-5px.0%.0%.0%="showToc = true">
       <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
         {% for chapter in chapters %}
         <li class="grid">
           <a class="flex gap-1 p-1 -m-1 font-medium text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" href="#{{ chapter.data.title | slugify }}">
-            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
+            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
             {{ chapter.data.title }}
           </a>
           <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-85">{{ chapter.data.ingress | safe }}</p>
@@ -64,7 +62,7 @@ variant: '2'
               href="#{{ chapter.data.title | slugify }}" 
               x-on:click="expandToc = false"
             >
-              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
+              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
               {{ chapter.data.title }}
             </a>
             <p class="pr-4 pl-6 mt-0.5 text-pretty opacity-80">{{ chapter.data.ingress | safe }}</p>
@@ -76,7 +74,7 @@ variant: '2'
               href="{{ page.url }}" 
               x-on:click="expandToc = false"
             >
-              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('translate-y-1 w-5 h-5') | safe }}
+              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
               Til toppen av siden
             </a>
           </li>
@@ -102,9 +100,9 @@ variant: '2'
           <h2 class="mt-8 mb-6 font-bold text-xl/tight text-balance ">{{ chapter.data.title }}</h2>
 
           {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 %}
-            <nav class="px-5 py-3 rounded-lg bg-slate-100">
+            <nav class="px-5 pt-4 pb-4 rounded-lg bg-slate-100">
               <h3 class="font-semibold">I dette kapittelet</h3>
-              <ul class="grid gap-1">
+              <ul class="grid gap-1 py-1">
                 {% for item in chapter.templateContent | tocData %}
                 <li>
                   <a class="flex gap-1 py-1 -mx-1 text-blue-500 underline group hover:text-blue-700 text-base/snug hover:decoration-2" href="#{{ item.id }}">
