--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -2,19 +2,19 @@
 <div class="absolute z-40 w-full h-0 transition inset-x" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown shadow-xl'" x-bind:aria-hidden="!menuOpen">
 
   {# Rollebytte #}
-  <div class="py-3 bg-white px-edge">
-    <div class="grid content-center -mx-1 xs:gap-2 sm:gap-6 xs:text-center xs:-mx-5 sm:mx-0 xs:justify-center xs:grid-flow-col max-w-wide lg:mx-auto">
+  <div class="grid py-3 bg-white grid-cols-center">
+    <div class="grid content-center -mx-1 col-container xs:gap-2 sm:gap-6 xs:text-center sm:mx-0 sm:justify-center sm:grid-flow-col max-w-wide lg:mx-auto">
     {% for role in audience %}
       <a href="#" class="block rounded-full py-1 px-5 {{ 'bg-blue-500 text-white font-semibold' if activeRole === role.title else 'hover:underline transition' }}">{{ role.title }}</a>
     {% endfor %}
     </div>
   </div>
 
-  <div class="pt-8 pb-12 bg-white border-t border-slate-200 px-edge">
-    <div class="grid gap-x-12 gap-y-12 mx-auto max-w-wide lg:grid-flow-col-dense lg:grid-cols-5 lg:grid-rows-[1fr_auto]">
+  <div class="grid pt-8 pb-12 bg-white border-t border-slate-200 grid-cols-center">
+    <div class="grid gap-x-12 gap-y-12 col-container lg:grid-cols-5 lg:grid-rows-[1fr_auto]">
 
       {# Områder #}
-      <div class="flex-1 row-start-1 lg:pr-4 lg:col-span-2 lg:row-span-2">
+      <div class="flex-1 row-start-1 lg:grid-flow-col-dense lg:pr-4 lg:col-span-2 lg:col-start-1 lg:row-span-2">
         <h3 class="text-sm tracking-widest uppercase opacity-80">{{ menu.areas.title | safe }}</h3>
         <ul class="grid gap-3 mt-2 sm:grid-cols-2 lg:grid-cols-1">
           {%- for link in menu.areas.linkList -%}
@@ -34,7 +34,7 @@
 
 
       {# Søk #}
-      <form class="w-full col-start-1 gap-2 lg:max-w-2xl lg:col-span-4 lg:row-start-1 lg:pr-20">
+      <form class="w-full gap-2 lg:col-start-3 lg:max-w-2xl lg:col-span-4 lg:row-start-1 lg:pr-20">
         <label class="block text-sm tracking-widest uppercase opacity-80" for="search">Søk</label>
         <div class="flex mt-2">
           <input class="flex-1 p-2 border border-gray-300 rounded-l focus:outline-none focus:rounded focus:z-10 focus:ring focus:ring-blue-800" id="search" type="text">
@@ -47,7 +47,7 @@
 
 
       {# Snarveier #}
-      <div class="flex flex-col lg:row-start-2 lg:col-span-3">
+      <div class="flex flex-col lg:row-start-2 lg:col-start-3 lg:col-span-3">
         <h3 class="text-sm tracking-widest uppercase opacity-80">{{ menu.shortcuts.title | safe }}</h3>
         <ul class="mt-1 sm:columns-2">
           {%- for link in menu.shortcuts.linkList -%}
