--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,20 +3,19 @@
 @tailwind utilities;
 
 @layer base {
-  
-/* @link https://utopia.fyi/clamp/calculator?a=320,1200,20—24 */
 
+  /* @link https://utopia.fyi/clamp/calculator?a=320,1200,20—24 */
   :root {
     --fluid-12-14: clamp(0.75rem, 0.7045rem + 0.2273vi, 0.875rem);
     --fluid-14-16: clamp(0.875rem, 0.8295rem + 0.2273vi, 1rem);
     --fluid-18-20: clamp(1.125rem, 1.0795rem + 0.2273vi, 1.25rem);
-    --fluid-20-24: clamp(1.25rem, 1.1591rem + 0.4545vi, 1.5rem);
+    --fluid-20-26: clamp(1.25rem, 1.1136rem + 0.6818vi, 1.625rem);
     --fluid-32-40: clamp(2rem, 1.8182rem + 0.9091vi, 2.5rem);
     --fluid-40-56: clamp(2.5rem, 2.1364rem + 1.8182vi, 3.5rem);
-}
+  }
 
   body {
-    color: theme(colors.slate.700);
+    color: theme('colors.slate.700');
   }
   * {
     text-decoration-thickness: 0.0625rem;
@@ -37,14 +36,29 @@
   .prose > :where(h1, h2, h3, h4, h5) {
     text-wrap: pretty;
     font-weight: 600;
-    color: theme(colors.gray.900);
+    color: theme('colors.gray.900');
     margin-block: 1.875em 0.375em;
   }
   :is(.prose, .accordion, .expander) > h3 {
-    font-size: var(--fluid-20-24);
+    font-size: var(--fluid-20-26);
     line-height: 1.33;
     letter-spacing: -0.0125em;
+    display: grid;
   }
+
+  :where(.prose) > h3:not(:first-child):before {
+      content: "– ⚒︎ –" / "";
+      content: "– • –" / "";
+      content: " ✽ " / "";
+      display: block;
+      padding-inline-end: 0.5em;
+      margin-inline: auto;
+      margin-block: -0.375em 0.625em;
+      opacity: 0.625;
+      font-weight: 100;
+      font-size: 120%;
+  }
+
   :is(.prose, .accordion, .expander) > h4 {
     font-size: var(--fluid-18-20);
     line-height: 1.33;
@@ -60,60 +74,70 @@
     margin-block-start: 0.25em;
   }
   :where(.prose, .accordion, .expander) > ul {
-    @apply list-disc pl-6;
+    list-style-type: disc;
+    padding-inline-start: theme('spacing.6');
   }
   :where(.prose, .accordion, .expander) > ol {
-    @apply list-decimal pl-6;
+    list-style-type: decimal;
+    padding-inline-start: theme('spacing.6');
   }
   :where(.prose, .accordion, .expander) > ol ::marker {
-    @apply font-bold font-sans;
+    font-weight: 700;
+    font-family: theme('fontFamily.sans');
   }
   :where(.prose, .accordion, .expander) > :where(ol, ul) li {
-    @apply pl-1;
+    padding-inline-start: theme('spacing.1');
   }
   :where(.prose, .accordion, .expander) > :where(ol, ul) li + li {
-    @apply mt-2.5;
+    margin-block-start: theme('spacing.[2.5]');
+
   }
   :where(.prose, .accordion, .expander) > :is(p, ul, ol) {
-    @apply text-pretty;
+    text-wrap: pretty;
   }
   :where(.prose, .accordion, .expander) > * a {
-    @apply text-blue-600 underline;
+    color: theme('colors.blue.600');
+    text-decoration-line: underline;
   }
   :where(.prose, .accordion, .expander) > * a:hover {
-    @apply hover:decoration-2;
+    text-decoration-thickness: 2px;
   }
   :where(.prose, .accordion, .expander) > table {
-    @apply text-left w-full;
+    text-align: left;
+    inline-size: 100%;
   }
   :where(.prose, .accordion, .expander) > table :where(th, td) {
-    @apply pr-4 py-1;
+    padding-inline-end: theme('spacing.4');
+    padding-block: theme('spacing.1');
   }
   :where(.prose, .accordion, .expander) > table :where(tbody tr) :where(th, td) {
-    @apply border-t border-slate-300;
+    border-top-width: 1px;
+    border-color: theme('colors.slate.300');
   }
   :where(.prose, .accordion, .expander) > table :where(thead th) {
-    @apply font-semibold text-sm;
+    font-weight: semibold;
+    font-size: var(--fluid-14-16);
   }
   :where(.prose, .accordion, .expander) > table :where(tbody th) {
-    @apply font-[375];
+    font-weight: 375;
   }
-
-
 
   /* Table of contents (toc) */
   .toc-highlight {
-    @apply border-l-4 border-transparent;
+    border-inline-start-width: 4px;
+    border-color: transparent;
   }
+
   .toc-highlight--active {
-    @apply lg:border-blue-600;
+    border-color: theme('colors.blue.600');
   }
 
   .toc-highlight-pill {
-    @apply rounded-full;
+    border-radius: theme('borderRadius.full');
   }
+
   .toc-highlight-pill--active {
-    @apply lg:bg-blue-50;
+    background-color: theme('colors.blue.50');
   }
 
 
@@ -121,12 +145,12 @@
 
   /* Accordion */
   .accordion {
-    border-bottom: 1px solid theme(colors.slate.200);
+    border-bottom: 1px solid theme('colors.slate.200');
   }
   .accordion details {
     display: grid;
     padding-inline: 44px 10px;
-    border-top: 1px solid theme(colors.slate.200);
+    border-top: 1px solid theme('colors.slate.200');
   }
   .accordion details + details {
     margin-block-start: 0;
@@ -145,11 +169,11 @@
     text-align: left;
     text-indent: -31px;
     text-wrap: pretty;
+    font-size: theme('fontSize.base');
     font-weight: 500;
     line-height: 1.375;
-    text-size: theme(fontSize.lg);
-    background-color: theme(colors.transparent);
-    color: theme(colors.blue.700);
+    background-color: theme('colors.transparent');
+    color: theme('colors.blue.700');
   }
   .accordion summary::-webkit-details-marker {
     display: none;
@@ -161,16 +185,16 @@
     border-radius: 4px 4px 8px 8px;
   }
   .accordion details[open] summary {
-    background-color: theme(colors.slate.100);
-    color: theme(colors.blue.700);
+    background-color: theme('colors.slate.100');
+    color: theme('colors.blue.700');
     margin-block-end: 12px;
   }
   .accordion summary:hover {
-    background-color: theme(colors.blue.50);
-    color: theme(colors.blue.700);
+    background-color: theme('colors.blue.50');
+    color: theme('colors.blue.700');
   }
   .accordion summary:before {
-    background-color: theme(colors.blue.50);
+    background-color: theme('colors.blue.50');
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 103 197 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
@@ -189,12 +213,12 @@
     outline: 3px solid white;
   }
   .accordion :where(details[open]) summary:before {
-    background-color: theme(colors.white);
+    background-color: theme('colors.white');
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 103 197 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     rotate: -180deg;
   }
   .accordion summary:hover:before {
-    background-color: theme(colors.blue.700);
+    background-color: theme('colors.blue.700');
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(255 255 255 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
   }
   .accordion summary > * {
@@ -215,9 +239,9 @@
   .expander {
     display: grid;
     padding-inline: 44px;
-    background-color: theme(colors.white);
-    border-radius: theme(borderRadius.lg);
-    border: 1px solid theme(colors.slate.300);
+    background-color: theme('colors.white');
+    border-radius: theme('borderRadius.lg');
+    border: 1px solid theme('colors.slate.300');
   }
   .expander[open] {
     padding-block-end: 32px;
@@ -228,24 +252,24 @@
     list-style: none;
     padding: 0.75em 12px 0.625em 44px;
     margin-inline: -44px;
-    border-radius: theme(borderRadius.lg);
+    border-radius: theme('borderRadius.lg');
     cursor: pointer;
     text-align: left;
     text-wrap: pretty;
     line-height: 1.375;
-    color: theme(colors.blue.700);
+    color: theme('colors.blue.700');
     font-weight: 500;
   }
   :where(.expander) summary::-webkit-details-marker {
     display: none;
   }
   :where(.expander[open]) summary {
-    border-radius: theme(borderRadius.lg) theme(borderRadius.lg) 0 0;
-    border-bottom: 1px solid theme(colors.slate.300);
+    border-radius: theme('borderRadius.lg') theme('borderRadius.lg') 0 0;
+    border-bottom: 1px solid theme('colors.slate.300');
     margin-block-end: 20px;
   }
   :where(.expander) summary:hover {
-    background-color: theme(colors.slate.100);
+    background-color: theme('colors.slate.100');
   }
   :where(.expander) summary:before {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='1.875' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
@@ -287,7 +311,7 @@
     list-style: none;
     padding: 0.75em 12px 0.625em 42px;
     cursor: pointer;
-    color: theme(colors.blue.600);
+    color: theme('colors.blue.600');
     line-height: 1.375;
     font-weight: 500;
     text-align: left;
@@ -296,10 +320,7 @@
   :where(.readmore) summary::-webkit-details-marker {
     display: none;
   }
-  :where(.readmore[open]) summary {
-  }
-  :where(.readmore) summary:hover {
-  }
+  
   :where(.readmore) summary:before {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='1.875' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
@@ -328,7 +349,7 @@
     padding-inline-start: 22px;
     padding-block: 12px;
     margin-inline-start: 20px;
-    border-left: 2px solid theme(colors.slate.200);
+    border-left: 2px solid theme('colors.slate.200');
   }
 
 
@@ -336,62 +357,65 @@
   .button {
     line-height: 1.15;
     overflow: visible;
-    padding: theme(spacing.3) theme(spacing.5);
+    padding: theme('spacing.3') theme('spacing.5');
     align-items: center;
-    border: 2px solid theme(colors.blue.500);
-    border-radius: theme(borderRadius.md);
+    border: 2px solid theme('colors.blue.500');
+    border-radius: theme('borderRadius.md');
     cursor: pointer;
     display: inline-flex;
-    gap: theme(spacing.2);
+    gap: theme('spacing.2');
     justify-content: center;
     font-weight: 600;
     text-decoration: none;
     margin: 0;
   }
   .button--primary {
-    background-color: theme(colors.white);
-    border-color: theme(colors.blue.500);
-    color: theme(colors.blue.500);
+    background-color: theme('colors.white');
+    border-color: theme('colors.blue.500');
+    color: theme('colors.blue.500');
   }
   .button--primary:hover {
-    border-color: theme(colors.blue.700);
-    background-color: theme(colors.blue.50);
-    color: theme(colors.blue.700);
+    border-color: theme('colors.blue.700');
+    background-color: theme('colors.blue.50');
+    color: theme('colors.blue.700');
   }
   .button--secondary {
-    border-color: theme(colors.transparent);
-    background-color: theme(colors.blue.50/75%);
+    border-color: theme('colors.transparent');
+    background-color: theme('colors.blue.50/75%');
   }
   .button--secondary:hover {
-    border-color: theme(colors.blue.600);
-    background-color: theme(colors.blue.50);
+    border-color: theme('colors.blue.600');
+    background-color: theme('colors.blue.50');
   }
   .button--tertiary {
-    border-color: theme(colors.blue.50);
-    background-color: theme(colors.blue.50);
+    border-color: theme('colors.blue.50');
+    background-color: theme('colors.blue.50');
   }
   .button--tertiary:hover {
-    background-color: theme(colors.blue.100);
-    border-color: theme(colors.blue.100);
+    background-color: theme('colors.blue.100');
+    border-color: theme('colors.blue.100');
   }
 
 }
 
+
 @layer utilities {
   .grid-cols-center {
-    --_edge: theme(spacing.edge);
+    --_container: clamp(0rem, -16rem + 40vi, 16rem);
+    --_prose: 20rem; 
+    --_edge: theme('spacing.page');
     grid-template-columns: 
-      [full-start] var(--_edge) minmax(0, 1fr) [wide-start] minmax(0, 1fr) [main-start side-start] minmax(0, 40rem) [main-end side-end] minmax(0, 1fr) [wide-end] minmax(0, 1fr) var(--_edge) [full-end];
+      [full-start] var(--_edge) [wide-start] minmax(0, 1fr) [container-start] var(--_container) [main-start side-start] minmax(0, var(--_prose)) minmax(0, var(--_prose)) [main-end side-end] var(--_container) [container-end] minmax(0, 1fr) [wide-end] var(--_edge) [full-end];
   }
 
   .grid-cols-left-1 {
-    --_edge: theme(spacing.edge);
+    --_edge: theme('spacing.edge');
     grid-template-columns: 
       [full-start] var(--_edge) [wide-start main-start side-start] minmax(0, 40rem) [main-end side-end] minmax(0, 1fr) [wide-end] var(--_edge) [full-end];
   }
 
   .grid-cols-left-2 {
-    --_edge: theme(spacing.edge);
+    --_edge: theme('spacing.edge');
     grid-template-columns: 
       [full-start] var(--_edge) minmax(0, 1fr)  
       [wide-start main-start] min(clamp(30rem, 18rem + 24vi, 40rem), 100%) 
@@ -403,6 +427,7 @@
 
   .col-full { grid-column: full }
   .col-wide { grid-column: wide }
+  .col-container { grid-column: container }
   .col-main { grid-column: main }
   .col-side { grid-column: side }
 
