--- a/src/index.njk
+++ b/src/index.njk
@@ -7,18 +7,23 @@ noJS: true
 {% set pages = [
   {
     title: 'Områdeside',
-    description: 'Listeside (helse og sykdom) med inngang til situasjoner som tilhører området.',
+    description: 'Samler inngang til alle situasjonssider som er aktuelle for det aktuelle området.',
     url: 'omrade'
   },
   {
     title: 'Produktside',
-    description: 'Kjerneside med all informasjon om en ytelse, tjeneste eller et hjelpemiddel.',
+    description: 'Informasjon om en ytelse, tjeneste eller et hjelpemiddel.',
     url: 'produkt'
+  },
+  {
+    title: 'Temaartikkel',
+    description: 'Gir dybdeinformasjon om ett konkret tema.',
+    url: 'tema'
   }
 ] %}
 
 {% macro link(item) %}
-  <div class="relative grid gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
+  <div class="relative grid place-content-start gap-1 py-6 pl-6 pr-8 text-lg rounded bg-slate-100 overflow-clip has-[a:hover]:bg-blue-500 has-[a:hover]:text-white">
     <a class="font-semibold text-blue-600 after:absolute hover:text-white after:z-10 after:inset-0" href="/{{ item.url }}/">
       {{ item.title }}
     </a>     
@@ -30,11 +35,13 @@ noJS: true
 
 
 {%- block content -%}
-<div class="py-page px-edge">
-  <div class="grid items-start w-full max-w-screen-md gap-2 mx-auto overflow-clip rounded-xl">
-    {% for item in pages %}      
-    {{ link(item) }}
-    {% endfor %}
+  <div class="py-page lg:py-20 grid grid-cols-center font-[375]">
+    <div class="grid items-start gap-2 col-container overflow-clip rounded-xl">
+      <div class="grid gap-2 lg:grid-cols-3">
+        {% for item in pages %}      
+        {{ link(item) }}
+        {% endfor %}
+      </div>
+    </div>
   </div>
-</div>
 {% endblock %}
