--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,5 +1,5 @@
-<footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-left-1 lg:grid-cols-left-2" x-bind:inert="menuOpen || notifyOpen">
-  <div class="col-wide">
+<footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-center" x-bind:inert="menuOpen || notifyOpen">
+  <div class="col-container">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
         <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
