Forenkling av temaartikkel

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,15 +4,19 @@
 
 @layer base {
 
-  /* @link https://utopia.fyi/clamp/calculator?a=320,1200,20—24 */
-  :root {
-    --fluid-12-14: clamp(0.75rem, 0.7045rem + 0.2273vi, 0.875rem);
-    --fluid-14-16: clamp(0.875rem, 0.8295rem + 0.2273vi, 1rem);
-    --fluid-18-20: clamp(1.125rem, 1.0795rem + 0.2273vi, 1.25rem);
-    --fluid-20-26: clamp(1.25rem, 1.1136rem + 0.6818vi, 1.625rem);
-    --fluid-32-40: clamp(2rem, 1.8182rem + 0.9091vi, 2.5rem);
-    --fluid-40-56: clamp(2.5rem, 2.1364rem + 1.8182vi, 3.5rem);
+/* @link https://utopia.fyi/type/calculator?c=320,18,1.125,1280,20,1.2,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+:root {
+    --text-fluid--2: clamp(0.8681rem, 0.8958rem + -0.0347vi, 0.8889rem);
+    --text-fluid--1: clamp(1rem, 0.9861rem + 0.0694vi, 1.0417rem);
+    --text-fluid-0: clamp(1.125rem, 1.0833rem + 0.2083vi, 1.25rem);
+    --text-fluid-1: clamp(1.2656rem, 1.1875rem + 0.3906vi, 1.5rem);
+    --text-fluid-2: clamp(1.4238rem, 1.2984rem + 0.627vi, 1.8rem);
+    --text-fluid-3: clamp(1.6018rem, 1.4157rem + 0.9303vi, 2.16rem);
+    --text-fluid-4: clamp(1.802rem, 1.5387rem + 1.3166vi, 2.592rem);
+    --text-fluid-5: clamp(2.0273rem, 1.6662rem + 1.8052vi, 3.1104rem);
   }
+
+
 
   body {
     color: theme('colors.slate.700');
@@ -30,42 +34,42 @@
 }
 
 @layer components {
-  :where(.prose, .accordion, .expander) > *:not(summary, h3) + * {
+  :where(.prose, .accordion, .expander) > *:not(summary, h3, h2) + * {
     margin-block-start: 1.75em;
   }
   .prose > :where(h1, h2, h3, h4, h5) {
     text-wrap: pretty;
     font-weight: 600;
     color: theme('colors.gray.900');
-    margin-block: 1.875em 0.375em;
+    margin-block: 1.5em 0.25em;
   }
-  :is(.prose, .accordion, .expander) > h3 {
-    font-size: var(--fluid-20-26);
+  :is(.prose, .accordion, .expander) > :where(h2, h3) {
+    font-size: var(--text-fluid-2);
     line-height: 1.33;
     letter-spacing: -0.0125em;
     display: grid;
   }
 
-  :where(.prose) > h3:not(:first-child):before {
+  :where(.prose--separator) > h3:not(:first-of-type):before {
       content: "– ⚒︎ –" / "";
       content: "– • –" / "";
       content: " ✽ " / "";
       display: block;
       padding-inline-end: 0.5em;
       margin-inline: auto;
-      margin-block: -0.375em 0.625em;
+      margin-block: -0.25em 0.75em;
       opacity: 0.625;
       font-weight: 100;
-      font-size: 120%;
+      font-size: 100%;
   }
 
   :is(.prose, .accordion, .expander) > h4 {
-    font-size: var(--fluid-18-20);
+    font-size: var(--text-fluid-1);
     line-height: 1.33;
     letter-spacing: -0.0125em;
   }
   :is(.prose, .accordion, .expander) > h5 {
-      font-size: var(--fluid-14-16);
+      font-size: var(--text-fluid--1);
       font-weight: 650;
       line-height: 1.33;
       margin-block-end: 0.25em;
@@ -116,7 +120,7 @@
   }
   :where(.prose, .accordion, .expander) > table :where(thead th) {
     font-weight: semibold;
-    font-size: var(--fluid-14-16);
+    font-size: var(--text-fluid--1);
   }
   :where(.prose, .accordion, .expander) > table :where(tbody th) {
     font-weight: 375;
