--- a/src/pages/tema/soketips/soketips.njk
+++ b/src/pages/tema/soketips/soketips.njk
@@ -2,81 +2,48 @@
 tags: 
   - tema
   - soketips
-type: 'Om NAV'
+// type: 'Om NAV'
 title: 'Søketips'
-ingress: 'Søkeresultatene viser treff på informasjon om stønader og tjenester fra NAV. Ønsker du søkeresultater fra andre områder, må du huke av i filtreringsboksen.'
+ingress: 'Søkeresultatene viser treff på informasjon om stønader og tjenester fra NAV.'
 permalink: 'tema/soketips/index.html'
 description: 'Kort artikkel med innholdsfortegnelse.'
 alpine: true
+published: "Oppdatert 20. mars 2024"
 ---
 
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
   <main class="grid pt-16 pb-32 grid-cols-center">
-      <h1 class="font-extrabold text-2xl/tight text-balance">{{ title | safe }}</h1>
-      <div class="mt-4 text-pretty">
-        <p class="text-lg">{{ ingress | safe }}</p>
+    {% if type %}      
+    <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+    {% endif %}
+    <h1 class="font-extrabold text-4xl/tight text-balance">{{ title | safe }}</h1>
+    <div class="mt-4 text-pretty">
+      <p class="text-lg">{{ ingress | safe }}</p>
 
-        {% if audience %}         
-        <div class="px-5 py-3 border rounded-lg border-slate-300 text-balance">
-          {{ audience | markdown | safe if audience }}
-        </div>
-        {% endif %}
-
-        <div class="flex gap-3 mt-8 mb-8 text-sm">
-          <span>{{ type | safe }}</span> | <span>Oppdatert 20.03.2024</span>  
-        </div>
+      {% if audience %}         
+      <div class="px-5 py-3 border rounded-lg border-slate-300 text-balance">
+        {{ audience | markdown | safe if audience }}
       </div>
+      {% endif %}
 
-      {% set pageToc = [
-      {
-        text: 'Personopplysninger',
-        id: 'personopplysninger'
-      },
-      {
-        text: 'Relevante treff',
-        id: 'relevante-treff'
-      },
-      {
-        text: 'Språkvarianter',
-        id: 'sprakvarianter'
-      }
-      ] %}
+    </div>
 
+    <div class="mt-8 border-t border-slate-200"></div>
 
-      <nav class="relative px-5 py-3 rounded-lg bg-slate-100">
-        <h3 class="pb-2 font-semibold">På denne siden</h3>
-        <ul class="grid gap-4 mt-1 justify-items-start">
-          {% for item in pageToc %}
-          <li>
-            <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
-              {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
-              <span>{{ item.text }}</span>
-            </a>
-          </li>
-          {% endfor %}
-          {# <li class="pt-5 border-t justify-self-stretch border-slate-400/25">
-            <a 
-              class="inline-flex items-center gap-0.5 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" 
-              href="{{ page.url }}" 
-            >
-              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('-translate-y-0.5 opacity-85') | safe }}
-              <span>Til toppen av siden</span>
-            </a>
-          </li> #}
-        </ul>
-      </nav>
+{% set mainContent %}
+Ønsker du søkeresultater fra andre områder, må du huke av i filtreringsboksen.
 
-      {% prose %}
-### Personopplysninger
+## Personopplysninger
+
 For å finne hvilket NAV-kontor du tilhører eller se personopplysninger om deg selv, må du logge inn. 
 
 Mangler du elektronisk ID, eller skal finne et NAV-kontor på vegne av noen andre? Da kan du søke opp NAV-kontor. 
 
 Ikke skriv inn sensitive opplysninger i søket.
 
-### Relevante treff
+## Relevante treff
 
 Hvis du får for mange treff:
 
@@ -91,11 +58,36 @@ Hvis du får ingen eller få treff:
 * Prøv et mer generelt begrep eller synonym for å få flere treff.
 * Hvis du skriver flere ord legges det automatisk til OG mellom ordene. Søk på psykiske helseproblemer gir for eksempel bare treff på innhold som har begge ordene. Hvis du får få treff, kan du derfor prøve å søke med bare ett begrep, for eksempel psykiske.
 
-### Språkvarianter
+## Språkvarianter
 
 En del av innholdet på nav.no finnes i ulike språkvarianter. Du kan velge språket eller målformen du foretrekker i søkefilteret "Foretrukket språk". Andre språkvarianter av innholdet vil da filtreres bort.
 
 Du vil fortsatt få treff på andre språk hvis innholdet ikke er oversatt til ditt valgte språk eller målform.
-      {% endprose %}
+{% endset %}
+
+{% set mainMarkup = mainContent | markdown %}
+
+
+    {% if mainMarkup | tocData(["h2"]) | length > 5 %}    
+    <nav class="relative px-5 py-3 mt-8 rounded-lg bg-slate-100">
+      <h3 class="pb-2 font-semibold">På denne siden</h3>
+      <ul class="grid gap-4 mt-1 justify-items-start">
+        {% for item in mainMarkup | tocData(["h2"]) %}
+        <li>
+          <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
+            {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
+            <span>{{ item.text }}</span>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+    </nav>
+    {% endif %}
+
+    <div class="mt-8 prose">
+      {{ mainContent | markdown | safe }}
+    </div>
+
+    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-main">{{ published | safe }}</div>
   </main>
 {%- endblock -%}
