--- a/src/_includes/base-old.njk
+++ b/src/_includes/base-old.njk
@@ -33,7 +33,7 @@
       audienceDropdownOpen: false,
       languageDropdownOpen: false,
       menuOpen: false,
-      notifyOpen: false
+      myPage: false
     }">
     {%- if environment === 'production' -%}
     {%- include "partials/banner.njk" -%}
