--- a/src/_includes/blank.njk
+++ b/src/_includes/blank.njk
@@ -30,7 +30,7 @@
       loggedIn: true,
       loginOpen: false,
       menuOpen: false,
-      notifyOpen: false,
+      myPage: false,
       newNotifications: true
     }">
     {%- if environment === 'production' -%}
