--- a/src/_includes/base-basic.njk
+++ b/src/_includes/base-basic.njk
@@ -34,7 +34,7 @@
       indexOpen: false,
       audienceDropdownOpen: false,
       menuOpen: false,
-      notifyOpen: false
+      myPage: false
     }">
     <div class="relative z-10 bg-white" >
     {%- if environment === 'production' -%}
