--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,5 +1,5 @@
 {# Navigation (Private) #}
-<div class="absolute z-40 w-full h-0 transition inset-x" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown shadow-xl'" x-bind:aria-hidden="!menuOpen">
+<div class="absolute z-40 w-full transition inset-x" x-bind:class="menuOpen ? 'opacity-0 animate-dropdown shadow-xl' : 'hidden'" x-bind:aria-hidden="!menuOpen" x-bind:hidden="!menuOpen" hidden>
 
   {# Rollebytte #}
   <div class="grid py-3 bg-white grid-cols-center">
