--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -1,18 +1,18 @@
 {%- macro button(params) -%}
 
-  {%- set buttonClasses = "bg-white border-2 border-blue-500 text-blue-600 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" -%}
+  {%- set default = "" -%}
 
   {%- if params.variant -%}
     {%- if params.variant === "primary" -%}
-      {%- set variant = "bg-blue-500 text-white border-blue-500 fine:hover:bg-blue-700 fine:hover:border-blue-700 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" -%}
+      {%- set variant = "font-medium" -%}
     {%- endif -%}
 
     {%- if params.variant === "secondary" -%}
-      {%- set variant = "bg-white text-blue-500 border-blue-500 fine:hover:border-blue-600 fine:hover:text-blue-700 fine:hover:bg-blue-50 focus:outline-none focus:ring focus:ring-blue-800 focus:ring-offset-1 focus:ring-offset-white" -%}
+      {%- set variant = "" -%}
     {%- endif -%}
   {%- endif -%}
 
-  <a href="{{ params.href or '#' }}" class="inline-flex items-center gap-2 px-6 py-2.5 no-underline rounded font-semibold leading-tight text-center justify-center shadow-sm border-2 ring-1 ring-black/5 {{ variant or buttonClasses }} {{ params.class }}">
+  <a href="{{ params.href or '#' }}" class="bg-blue-50 rounded-full hover:bg-blue-500 hover:text-white text-center py-2 px-5 no-underline {{ variant or default }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
