--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -12,7 +12,7 @@ permalink: '/omrade/arbeid/index.html'
     <div class="grid pt-12 bg-white grid-cols-center">
       <div class="relative col-main">
         {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
-        <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+        {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
         <h1 class="mt-0.5 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
         <h2 class="col-span-2 col-start-1 mt-2 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
@@ -33,4 +33,6 @@ permalink: '/omrade/arbeid/index.html'
       </div>
     </div>
   </main>
+
+  {% include "partials/contact.njk" %}
 {%- endblock -%}
