--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -10,16 +10,16 @@ permalink: '/omrade/helse-og-sykdom/index.html'
 {%- block content -%}
   <main class="bg-slate-100">
     <div class="grid pt-12 bg-white grid-cols-left-1 lg:grid-cols-left-2 ">
-      <div class="relative col-wide">
+      <div class="relative col-container">
         {{ '/src/_includes/svg/area-illustrations/helse.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
-        <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+        {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
         <h1 class="mt-0.5 -translate-x-[0.0625em] font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
         <h2 class="col-span-2 col-start-1 mt-2 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
     </div>
     <div class="grid grid-flow-row-dense pt-12 pb-24 grid-cols-left-1 lg:grid-cols-left-2">
-      <div class="mb-12 col-wide lg:col-side">[spesielle elementer]</div>
-      <div class="col-wide lg:col-main">
+      <div class="mb-12 col-container lg:col-side">[spesielle elementer]</div>
+      <div class="col-container lg:col-main">
         <ul>
           {%- for item in situationList -%}
             <li class="{{ 'border-t border-slate-300' if not loop.first }}">
@@ -36,4 +36,6 @@ permalink: '/omrade/helse-og-sykdom/index.html'
       </div>
     </div>
   </main>
+
+  {% include "partials/contact.njk" %}
 {%- endblock -%}
