--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-center" x-bind:inert="menuOpen || myPage">
+<footer class="grid pb-12 text-white bg-deepblue-800 grid-cols-center" x-bind:inert="menuOpen || myPageOpen">
   <div class="col-container">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
