--- a/src/_includes/partials/minSide.njk
+++ b/src/_includes/partials/minSide.njk
@@ -1,5 +1,5 @@
 {# Notifications #}
-<div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-left-1 lg:grid-cols-left-2 top-full " x-bind:class="myPage ? 'opacity-0 animate-dropdown' : 'hidden'" x-bind:hidden="!myPage" hidden>
+<div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-left-1 lg:grid-cols-left-2 top-full " x-bind:class="myPageOpen ? 'opacity-0 animate-dropdown' : 'hidden'" x-bind:hidden="!myPageOpen" hidden>
   <div class="sm:max-w-xl w-full bg-white rounded-b-lg shadow-lg md:max-h-[92vh] col-full sm:col-wide sm:justify-self-end">
     <p class="grid pt-5 pb-4 border-b mx-edge sm:mx-6 border-slate-200" x-on:click="newNotifications = !newNotifications">
       <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
@@ -66,7 +66,7 @@
     </div>
     <div class="grid">
       <div x-show="!newNotifications" class="border-t border-slate-200 mx-clamp-gap sm:mx-6"></div>
-      <button class="flex items-center gap-2 py-3 text-blue-500 rounded-b-lg px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white" x-on:click="loggedIn = false, myPage = false">
+      <button class="flex items-center gap-2 py-3 text-blue-500 rounded-b-lg px-edge sm:px-6 fine:hover:bg-blue-500 fine:hover:text-white" x-on:click="loggedIn = false, myPageOpen = false">
         {{ '/src/_includes/svg/icons/logout.svg' | svgContents() | safe }}
         <span>Logg ut</span>
       </button>
