--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -9,31 +9,31 @@ alpine: true
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main x-bind:inert="menuOpen || notifyOpen">
-    <div>
-      <div>
-        <h2>Hva kan vi hjelpe deg med?</h2>
-        <ul>
+  <main class="" x-bind:inert="menuOpen || myPageOpen">
+    <div class="grid py-12 grid-cols-center">
+      <div class="col-container">
+        <h2 class="text-xl font-semibold">Hva kan vi hjelpe deg med?</h2>
+        <ul class="grid gap-1 mt-4 text-lg sm:gap-4 sm:grid-cols-2">
           {%- for area in areaList -%}
-            <li>
-              <a href="#">
+            <li class="relative grid items-center break-inside-avoid pl-5 sm:pl-8 pr-32 py-3 rounded-xl min-h-16 sm:min-h-24 text-blue-600 bg-slate-100 has-[a:hover]:bg-blue-50 has-[a:hover]:text-blue-700">
+              <a class="leading-tight after:absolute after:inset-0 text-balance" href="#">
                 <span>{{ area.title | safe }}</span>
-                {# {{ area.icon | svgContents("-z-10 right-0 h-full w-auto rounded-lg self-stretch absolute inset-y-0 pointer-events-none") | safe if area.icon }} #}
               </a>
+              {{ area.icon | svgContents("z-10 right-0 h-full w-auto rounded-r-lg self-stretch absolute inset-y-0 pointer-events-none pr-5 sm:pr-0") | safe if area.icon }}
             </li>
           {%- endfor -%}
         </ul>
       </div>
     </div>
 
-    <div>
-      <div>
-        <h2>Snarveier</h2>
-        <ul>
+    <div class="grid pt-4 pb-12 grid-cols-center">
+      <div class="col-container">
+        <h2 class="text-xl font-semibold">Snarveier</h2>
+        <ul class="text-lg sm:gap-8 sm:columns-2">
           {%- for shortcut in shortcutsList -%}
-            <li>
-              <a href="#">
-                {# {{ shortcut.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe if shortcut.icon }} #}
+            <li class="block">
+              <a class="inline-flex gap-2 items-center py-0.5 text-blue-600 underline hover:decoration-2" href="#">
+                {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents("w-6 h-6") | safe if shortcut.icon }}
                 <span>{{ shortcut.title | safe }}</span>
               </a>
             </li>
@@ -44,54 +44,56 @@ alpine: true
     </div>
 
 
-    <div>
-      <div>
+    {# <div class="grid grid-cols-center">
+      <div class="col-container">
         <h2>Søke og ettersende</h2>
         <ul>
           {%- for form in formsList -%}
             <li>
               <a href="{{ form.href or '#'}}">
-                {# {{ form.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe if form.icon }} #}
+                {{ form.icon | svgContents("w-12 h-12 md:w-16 md:h-16") | safe if form.icon }}
                 <span>{{ form.title | safe }}</span>
               </a>
             </li>
           {%- endfor -%}
         </ul>
       </div>
-    </div>
+    </div> #}
 
-    <div>
-      <div>
-        <h2>Aktuelt</h2>
-        <div>
+    <div class="grid pt-10 pb-8 grid-cols-center bg-slate-50">
+      <div class="col-container">
+        <h2 class="text-xl font-semibold">Aktuelt</h2>
+        <div class="-mx-5 sm:gap-8 sm:columns-2">
           {%- for news in newsList -%}
-            <a href="#">
-              <span>{{ news.title | safe }}</span>
-              <span>{{ news.date }}</span>
-            </a>
+          <article class="relative px-5 py-3 rounded-lg has-[a:hover]:bg-white">
+            <h3 class="text-lg">
+              <a class="text-blue-600 underline hover:decoration-2 after:absolute after:inset-0" href="#">{{ news.title | safe }}</a>
+            </h3>
+            <div>{{ news.date }}</div>
+            </article>
           {%- endfor -%}
         </div>
       </div>
     </div>
 
-    <div>
-      <div>
-        <h2>Kontakt oss</h2>
-        <div>
-          <div>
-            <h3>
-              <a href="#">Du kan chatte med oss</a>
+    <div class="grid pt-8 pb-16 grid-cols-center">
+      <div class="col-container">
+        <h2 class="text-xl font-semibold">Kontakt oss</h2>
+        <div class="grid gap-8 mt-4 sm:grid-cols-2">
+          <div class="relative px-8 py-6 rounded-bl-none rounded-xl bg-blue-50">
+            <h3 class="text-lg ">
+              <a class="text-blue-500 underline hover:decoration-2" href="#">Du kan chatte med oss</a>
             </h3>
-            <p>Du møter først chatbot Frida. Du kan be Frida om å få chatte med en veileder (hverdager 09:00–15:00)</p>
-            {# <svg viewBox="0 0 24 24" width="24" height="24"  aria-hidden="true" focusable="false" >
-              <polygon points="0 0, 24 0, 0 24" />
-            </svg> #}
+            <p class="mt-1 text-balance">Du møter først chatbot Frida. Du kan be Frida om å få chatte med en veileder (hverdager 09.00–15.00)</p>
+            <svg class="absolute left-0 top-full" viewBox="0 0 24 24" width="24" height="24" aria-hidden="true" focusable="false" >
+              <polygon fill="rgb(230 240 255)" points="0 0, 24 0, 0 24" />
+            </svg>
           </div>
-          <div>
-            <h3>
-              <a href="#">Du kan også ringe eller skrive til oss</a>
+          <div class="px-8 py-6">
+            <h3 class="text-lg">
+              <a class="text-blue-500 underline hover:decoration-2" href="#">Du kan også ringe eller skrive til oss</a>
             </h3>
-            <p>Se hvordan du kan kontakte oss på ulike måter.</p>
+            <p class="mt-1 leading-snug text-balance">Se hvordan du kan kontakte oss på ulike måter.</p>
           </div>
         </div>
       </div>
