Type og kategori

--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -1,8 +1,8 @@
 ---
-type: 'Privatperson'
-title: 'Forside'
+type: 'Forside'
+title: 'Privatperson'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
-tags: ['template']
+tags: ['proto']
 order: 1
 alpine: true
 ---
