--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -1,8 +1,7 @@
 ---
 title: 'Arbeid'
 description: 'Listeside uten ingress og piktogram'
-type: 'Område'
-tags: ['listeside']
+tags: ['listeside', 'proto']
 permalink: '/omrade/arbeid/index.html'
 ---
 {%- extends 'base.njk' -%}
