--- a/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
+++ b/src/pages/omrade/helse-og-sykdom/helse-og-sykdom.njk
@@ -1,8 +1,7 @@
 ---
 title: 'Helse og sykdom'
 description: 'Listeside med ingress og piktogram'
-type: 'Område'
-tags: ['listeside']
+tags: ['listeside', 'proto']
 permalink: '/omrade/helse-og-sykdom/index.html'
 ---
 {%- extends 'base.njk' -%}
