--- a/src/pages/tema/soketips/soketips.njk
+++ b/src/pages/tema/soketips/soketips.njk
@@ -1,8 +1,6 @@
 ---
-tags: 
-  - tema
-  - soketips
-// type: 'Om NAV'
+tags: ['tema', 'soketips', 'proto']
+type: 'Temaside'
 title: 'Søketips'
 ingress: 'Søkeresultatene viser treff på informasjon om stønader og tjenester fra NAV.'
 permalink: 'tema/soketips/index.html'
