--- a/src/pages/produkt/sykepenger/sykepenger-1.njk
+++ b/src/pages/produkt/sykepenger/sykepenger-1.njk
@@ -1,5 +1,5 @@
 ---
-tags: ['produkt']
+tags: ['produkt', 'proto']
 description: 'Med «bytteknapp» i bunnen av hver kapittelmeny.'
 permalink: 'produkt/sykepenger/1/index.html'
 variant: '1'
@@ -11,7 +11,7 @@ variant: '1'
 
   <main class="grid py-16 grid-cols-center" data-theme="sykepenger">
     <div class="col-main">
-      <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div>
+      <div class="text-sm tracking-widest uppercase">{{ category | safe }}</div>
       <h1 class="mt-1 font-extrabold text-4xl/tight text-balance ">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg">{{ ingress | safe }}</p>
@@ -66,7 +66,7 @@ variant: '1'
                 </a>
               </li>
               {% endfor %}
-              <li class="pt-5 border-t justify-self-stretch border-slate-400/25">
+              {# <li class="pt-5 border-t justify-self-stretch border-slate-400/25">
                 <a 
                   class="inline-flex items-center gap-0.5 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" 
                   href="{{ page.url }}" 
@@ -74,7 +74,7 @@ variant: '1'
                   {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('-translate-y-0.5 opacity-85') | safe }}
                   <span>Til toppen av siden</span>
                 </a>
-              </li>
+              </li> #}
             </ul>
           </nav>
           {% endif %}
