--- a/src/pages/omrade/arbeid/arbeid.njk
+++ b/src/pages/omrade/arbeid/arbeid.njk
@@ -7,25 +7,26 @@ permalink: '/omrade/arbeid/index.html'
 {%- extends 'base.njk' -%}
 
 {%- block content -%}
-  <main class="bg-slate-100">
-    <div class="grid pt-12 bg-white grid-cols-center">
+  <main class="pb-12 bg-white">
+    <div class="grid pt-12 grid-cols-center">
       <div class="relative col-main">
-        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-32 mt-5 ml-auto w-1/3 xs:w-auto float-right xs:absolute xs:bottom-0 xs:right-0') | safe }}
+        {{ '/src/_includes/svg/area-illustrations/arbeid.svg' | svgContents('h-auto min-w-28 max-w-48 ml-auto w-1/3 float-right') | safe }}
         {# <div class="text-sm tracking-widest uppercase">{{ type | safe }}</div> #}
-        <h1 class="mt-0.5 font-bold text-4xl/tight text-balance">{{ title | safe }}</h1>
-        <h2 class="col-span-2 col-start-1 mt-2 mb-8 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
-      </div>
-    </div>
-    <div class="grid grid-flow-row-dense pt-8 pb-16 grid-cols-center">
-      <div class="mb-12 col-wide lg:col-side">
-        <a class="block px-5 py-4 font-semibold leading-snug text-blue-600 underline bg-red-100 rounded-lg hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
+        <h1 class="mt-2 font-black tracking-tight text-4xl/tight text-balance">
+          {{ title | safe }}
+        </h1>
+        <h2 class="col-span-2 col-start-1 mt-2 text-lg xs:col-start-1 xs:col-span-1 max-w-prose">Hva er situasjonen din?</h2>
       </div>
 
-      <div class="col-wide lg:col-main">
+      <div class="mt-12 col-wide lg:col-side">
+        <a class="block rounded-sm px-4 py-2.5 font-medium leading-snug text-blue-600 underline border-l-4 bg-slate-100 border-slate-300 hover:text-blue-500 hover:decoration-2" href="#">Finn ledige stillinger på arbeidsplassen.no</a>        
+      </div>
+
+      <div class="mt-8 col-wide lg:col-main">
         <ul>
           {%- for item in situationList -%}
-            <li class="relative py-4 flex flex-col {{ 'border-t border-slate-300' if not loop.first }}">
-              <a class="text-lg font-semibold leading-snug text-blue-600 text-balance hover:text-blue-500 hover:underline" href="#">{{ item.title | safe }}</a>
+            <li class="relative flex flex-col py-2 border-t sm:py-3 border-slate-200">
+              <a class="font-normal leading-snug text-blue-600 text-balance hover:text-blue-500 hover:underline" href="#">{{ item.title | safe }}</a>
             </li>
           {%- endfor -%}
         </ul>
